--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/commands": "^6.0.0",
+    "@codemirror/lang-javascript": "^6.0.1",
+    "@codemirror/state": "^6.0.1",
+    "@codemirror/view": "^6.0.2",
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.3",
     "esbuild": "^0.14.47",
